[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "tmp"
version = "0.1.2"
authors = [
  { name="msoconnor", email="msoconnor2@wisc.edu" },
]
description = "Tutorial"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-only"

install_requires =['numpy>=1.0','scipy>=1.0']
